Fix Popup not resizing after being resized to fit in window

Problem:

In the example in the linked bug report, the Popup starts off
too large for the window and so it's resized to fit within it.
When the contentHeight later shrinks (as a result of the ListView's
implicitHeight changing) enough that the Popup could fit, it is not
resized.

Why it happens:

When the model of the example in the bug report is changed to
a lower number, setImplicitHeight is called on the ListView
(since we do implicitHeight: contentHeight).

In QQuickPanePrivate::init() (QQuickPopupItem inherits from QQuickPane),
we do this:

    connect(q, &QQuickControl::implicitContentHeightChanged, this, &QQuickPanePrivate::updateContentHeight);

So the implicitHeight change causes
QQuickPanePrivate::updateContentHeight() to be called, which calls
QQuickPopupItem::contentSizeChange(). That calls
QQuickPopup::contentSizeChange(), which in turn emits
contentWidthChanged, which causes the binding in Popup.qml to be
re-evaluated. So the implicitHeight of the Popup is set to the
implicitHeight of the ListView + vertical padding, which causes the
QQuickPopupItem's implicitHeight to be set to the same value.

However, since the last repositioning (on startup) set the
QQuickPopupItem's height explicitly, any further changes to its
implicitHeight will not result in the height being set:

    void QQuickItem::setImplicitHeight(qreal h)
    {
        Q_D(QQuickItem);
        bool changed = h != d->implicitHeight;
        d->implicitHeight = h;
        if (d->height.valueBypassingBindings() == h || heightValid()) {
            if (changed)
                d->implicitHeightChanged();
            if (d->height.valueBypassingBindings() == h || heightValid())
                return; // <==== returns early here if explicit height is set
            changed = false;
        }

        // [...]
        d->height.setValueBypassingBindings(h); // <==== explicit height would have been set here

How this patch fixes it:

Reset the width/heightValidFlag to false after setting the width/height
of the QQuickPopupItem.

Change-Id: Id2660c6f144a8a3c1fbfe83b007eaf7a71449be8
Fixes: QTBUG-102724
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 95bfd215301308479535322af9c8cf5d493bd43a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>