src/quicktemplates2/qquickpopupitem.cpp
@@ -45,6 +45,7 @@
 #include "qquickpopup_p_p.h"
 #include "qquickdeferredexecute_p_p.h"
 
+#include <QtCore/qloggingcategory.h>
 #if QT_CONFIG(shortcut)
 #  include <QtGui/private/qshortcutmap_p.h>
 #endif
@@ -56,6 +57,8 @@
 
 QT_BEGIN_NAMESPACE
 
+Q_LOGGING_CATEGORY(lcPopupItem, "qt.quick.controls.popupitem")
+
 QQuickPopupItemPrivate::QQuickPopupItemPrivate(QQuickPopup *popup)
     : popup(popup)
 {
@@ -64,12 +67,14 @@ QQuickPopupItemPrivate::QQuickPopupItemPrivate(QQuickPopup *popup)
 
 void QQuickPopupItemPrivate::implicitWidthChanged()
 {
+    qCDebug(lcPopupItem).nospace() << "implicitWidthChanged called on " << q_func() << "; new implicitWidth is " << implicitWidth;
     QQuickPagePrivate::implicitWidthChanged();
     emit popup->implicitWidthChanged();
 }
 
 void QQuickPopupItemPrivate::implicitHeightChanged()
 {
+    qCDebug(lcPopupItem).nospace() << "implicitHeightChanged called on " << q_func() << "; new implicitHeight is " << implicitHeight;
     QQuickPagePrivate::implicitHeightChanged();
     emit popup->implicitHeightChanged();
 }
@@ -325,6 +330,7 @@ void QQuickPopupItem::contentItemChange(QQuickItem *newItem, QQuickItem *oldItem
 void QQuickPopupItem::contentSizeChange(const QSizeF &newSize, const QSizeF &oldSize)
 {
     Q_D(QQuickPopupItem);
+    qCDebug(lcPopupItem) << "contentSizeChange called on" << this << "newSize" << newSize << "oldSize" << oldSize;
     QQuickPage::contentSizeChange(newSize, oldSize);
     d->popup->contentSizeChange(newSize, oldSize);
 }
@@ -339,6 +345,7 @@ void QQuickPopupItem::fontChange(const QFont &newFont, const QFont &oldFont)
 void QQuickPopupItem::geometryChange(const QRectF &newGeometry, const QRectF &oldGeometry)
 {
     Q_D(QQuickPopupItem);
+    qCDebug(lcPopupItem) << "geometryChange called on" << this << "newGeometry" << newGeometry << "oldGeometry" << oldGeometry;
     QQuickPage::geometryChange(newGeometry, oldGeometry);
     d->popup->geometryChange(newGeometry, oldGeometry);
 }
